style.css
body{
    margin: 0 auto;
    padding: 0;
    height: 100vh;
    font-family: sans-serif;
    background-color: #16171C;
}

.title{
    display: flex;
    justify-content: center;
    font-size: 3em;
    color: #00e5a0;
}

.todoMain{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 15px;
}

.todoMain input{
    width: 95%;
    height: 1em;
    border-radius: 55px;
    padding: 15px ;
    border: 2px solid #696969;
    background-color: transparent;
    font-size: 1.5em;
    color: white;
}

.todoMain input::placeholder{
    font-size: 1em;
    color: #696969;
}

#add{
   width: 40%;
   height: 2em;
   padding: 10px 0;
   padding-bottom: 41px;
   font-size: 1.5em; 
   font-family: sans-serif;
   background-color: #00e5a0;
   border: 2px solid #00e5a0;
   border-radius: 55px;
}

.tasks{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 15px;
    margin: 0 auto;
    margin-top: 25px;
    width: 40%;
    height: fit-content;
    padding: 10px;
    background-color: #24252A;
    opacity: 0.8;
    border-radius: 55px;
}

.checkbox{
    appearance: none;
    height: 30px;
    width: 30px;
    border-radius: 50%;
    border: 2px solid #696969;
}


.taskValue{
    color: white;
    font-size: 1.5em;
    margin: 0 auto 0 auto;
}

.deleteIcon{
    height: 30px;
    width: 30px;
}

